--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,15 @@
+@font-face {
+	font-family: JuliaMono-Regular;
+	src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono/webfonts/JuliaMono-Regular.woff2");
+}
+
+@import "gruvbox.css";
+
 body {
 	align:center;
+	font-family: JuliaMono-Regular;
+	font-style: normal;
+	background-color:#e3e3e3;
 }
 
 main {
@@ -13,30 +23,80 @@ header{
 }
 
 .container{
-	display:flex;
-	padding:30px;
+	display: flex;
+	align-items: center;
+	padding: 30px;
+	height:80%
 }
 
 #input{
+	gap:20px	
 }
 
-#output{
+#formula{ 
+	font-family: JuliaMono-Regular;
+	font-size: 20px;
+	font-weight: 200;
+	letter-spacing: 1px;
+	padding: 10px 20px;
+	margin: 8px;
+	width:650px;
+	height:45px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
 
+
+.box{
+	width:80%;
+	background-color:white;
+	padding:10px;
+	margin: 10px;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
 
 .output{
-	border:1px solid black;
+	border-radius: 2%;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 	width: 700px;
 	height: 500px;
-	margin:3px;
+	margin:20px;
+	padding:10px;
 
 }
 
-.buttons{
-	height:5%;
-	border-bottom:1px solid black;
-}
 
 #cy{
 	height:95%;
+}
+
+
+/* BACKGROUND MOVE */
+
+
+.clicky {
+	height: 2.5rem;
+	width: 4.5rem;
+	margin: auto;
+	cursor:pointer;
+	background-color: var(--yellow);
+	transition: all .5s;
+	display:flex;
+	border-radius: 10%;
+	justify-content:left;
+	align-items:center;
+	border: 3px solid var(--blue);
+	color:white;
+	box-shadow:0 5px 0 var(--blue);
+}
+
+.clicky:active{
+	box-shadow:none;
+	transform: translateY(5px);
+
+}
+
+i{
+	transform: translateX(11px);
 }
