--- a/public/style.css
+++ b/public/style.css
@@ -191,3 +191,99 @@ input[type="radio"]:checked+label{
 	background:#183153;
 	color:white;
 }
+
+/* hola que tl */
+/* .base { */
+/* 	border-radius: 10px; */
+/* 	background: #272B2C; */
+/* 	display: flex; */
+/* 	width: 700px; */
+/* 	height: auto; */
+/* 	flex-direction: column; */
+/* 	padding: 30px 15px; */
+/* 	font: 28px arial; */
+/* 	box-shadow: 0px 40px 45px rgba(0, 0, 0, .4); */
+/* } */
+
+.base{
+	display: flex;
+	width: 700px;
+	border-radius: 2%;
+	width: 700px;
+	height: auto; 
+	margin-left:20px;
+	flex-direction: column;
+	padding: 30px 15px;
+	font: 28px arial;
+	padding:10px;
+	border: 3px solid #183153;
+	box-shadow:0 5px 0 #183153;
+}
+
+div[class*='line'] {
+	display: flex;
+	justify-content: space-around;
+}
+
+div[class*='line'] + div[class*='line'] {
+	margin-top: 15px;
+}
+
+
+div[class*='line'] span {
+	/* box-shadow: 0px 3px 3px rgba(0, 0, 0, .7); */
+	/* color: gray; */
+	/* padding: 15px; */
+	/* background: #2F3336; */
+	/* border-radius: 12px; */
+	/* width: 25px; */
+	/* text-align: center; */
+	display: flex;
+	justify-content:center;
+	height: 2.3rem;
+	width: 2.3rem;
+	cursor:pointer;
+	border-radius: 10%;
+	align-items:center;
+	border: 3px solid #183153;
+	box-shadow:0 5px 0 #183153;
+	color:#183153;
+}
+
+div[class*='line'] span i {
+	color: #183153;
+}
+
+div[class*='line'] span:active {
+	transform: scale(.9);
+}
+
+div span:hover {
+	filter: brightness(85%);
+}
+
+.line3 span:last-of-type {
+	width: 35px;
+}
+
+
+.line4 span:nth-child(3),
+.line4 span:nth-child(5) {
+	width: 45px;
+}
+
+.line4 span:nth-child(4) {
+	width: 225px
+}
+
+.line4 span:last-of-type {
+	width: 105px
+}
+
+#backspace {
+	fill: #183153;
+	width: 35px;
+	height:35px;
+}
+
+
